# k2y

./: .gitignore  DOCSTRING_IMPROVEMENTS.md  IMPROVEMENTS.md  README.md  pyproject.toml
docs/source/: conf.py
src/k2y/: UTILS_README.md  aiida.py  cli.py  extract_kpoints.py  k2y.py  template.QP
src/k2y/templates/: ns.db1  template_v510.QP  template_v530.QP  template_v530_spin.QP
tests/: tests.py
